--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         node: [16]
-        java: [8]
+        java: [8, 8-jre]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
