--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [16.19.0]
+        node: [16.19.0, 18.13.0]
         openjdk: [8, 8-slim]
     steps:
       - name: Checkout
