--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         node: [16.19.0, 18.13.0]
-        openjdk: [8, 8-jre]
+        openjdk: [8, 8-jre, 19]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
